fix small width layout issue

--- a/_sass/light.scss
+++ b/_sass/light.scss
@@ -429,6 +429,24 @@ blockquote {
 .navbar .navbar-nav .nav-link:hover::after {
   width: 100%;
 }
+.navbar-brand {
+  background-color:#777;
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.post-right {
+  width: 300px;
+  position: fixed; 
+  height: auto !important; 
+  top: 75px;
+}
+
+@media screen and (max-width: 1400px) {
+  .post-right {
+    width: 260px;
+}}
 
 .code-header {
   display: flex;
